Removed test file and added user_interface.py file with search and insert implementation from the menu to help students with the implementation of the complete program

--- a/sqlconfig.conf
+++ b/sqlconfig.conf
@@ -2,4 +2,4 @@
 host = localhost
 username = your mysql username here
 password = your mysql password here
-database = your database name here
+database = musicsampledb
