Added transactions property to config file

--- a/sqlconfig.conf
+++ b/sqlconfig.conf
@@ -3,3 +3,4 @@ host = localhost
 username = your mysql username here
 password = your mysql password here
 database = musicsampledb
+transactions = 0
